# refactoring-code_smells-design_patterns

./: .gitignore  Makefile  README.md
code-smells/bloaters/long-method/: java-student_grades-01_base_example
design-patterns/creational/abstract-factory/: kotlin-payment_gateways-01_base
design-patterns/creational/factory-method/: ts-stock_counter-03_add_factory_method
design-patterns/creational/lazy-initialization/: kotlin-lazy_browser-01_base
design-patterns/creational/object-pool/: kotlin-browsers_pool-01_base
design-patterns/creational/parameterized-factory-method/: ts-stock_counter_dynamic-02_extract_parameterized_factory_method
design-patterns/creational/prototype/: php-repeat_purchase-01_base  ts-monsters_game-01_base
design-patterns/creational/singleton/: php-feature_flags-01_base
examples/csharp/: .gitignore  Makefile  New-ExampleProject.ps1  csharp.sln
examples/csharp/csharp-booking-01_base/: csharp-booking-01_base.csproj  csharp-booking-01_base.sln
examples/csharp/csharp-booking-02_introduce_parameter_object/: csharp-booking-02_introduce_parameter_object.sln
examples/js/js-bonus-01_base/: package.json
exercises/graduated_tiered_prices/: README.md
exercises/legacy_create_video/: README.md
exercises/product-pricing/: README.md
exercises/shopping_cart/: README.md
exercises/tiered_pricing/: README.md
exercises/tiered_pricing/solutions/elwazy-python/: pyproject.toml
exercises/tiered_pricing/solutions/elwazy-python/elwazy_python/: license.py
exercises/tiered_pricing/solutions/elwazy-python/tests/: test_license_price_calculation.py
(+726 files in other folders)
